cabal-version:      3.0
name:               elementary-logger
version:            0.1.0.0
-- synopsis:
-- description:
license:            MPL-2.0
license-file:       LICENSE
author:             kakkak444
maintainer:         172775100+kakkak444@users.noreply.github.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Elementary.Logger
                    , Elementary.Logger.Internal
    -- other-modules:
    -- other-extensions:
    build-depends:    base >= 4.16 && < 4.22
                    , mtl >= 1.0
                    , safe-exceptions ^>=0.1
                    , stm >= 2.1
                    , stm-chans >= 1.0
                    , text >= 1.0
                    , time >= 1.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite elementary-logger-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.21.0.0,
        elementary-logger
